# mlx6-graph_image_to_code

./: .gitignore  README.md  graph_dataset.py  inference.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/components/CodeViewer/: index.tsx
client/src/components/ImageUpload/: index.tsx
client/src/components/Inference/: index.tsx
client/src/components/LoadingWheel/: index.tsx
client/src/lib/: runInference.ts
data/: graphGenerator.ts  puppeteer.ts
src/: constants.py  graph_dataset.py  inference.py  server.py  train.py
